--- a/src/index.css
+++ b/src/index.css
@@ -1213,7 +1213,9 @@ footer p {
   width: auto;
   min-width: 70%;
   max-width: 90vw;
-  height: 300px;
+  min-height: 400px;
+  max-height: 500px;
+  padding: 30px 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -1231,6 +1233,10 @@ footer p {
   /* font-size: 1.3rem; */
 }
 
+.login-form img{
+  width: 200px;
+  max-height: auto;
+}
 
 .login-form input {
   height: 50px;
@@ -1245,8 +1251,15 @@ footer p {
 }
 
 .login-greeting {
+  margin: 30px 0;
   width: 80%;
+  /* height: 300px; */
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  line-height: 1.5rem;
+
 }
 
 .login-buttons{
