--- a/src/index.css
+++ b/src/index.css
@@ -1708,7 +1708,8 @@ input::-webkit-inner-spin-button {
 .reply {
   min-width: 350px;
   width: 85%;
-  padding: 30px 0;
+  padding: 30px;
+  margin: 0 10px;
   line-height: 1.5em;
   font-size: 1em;
   font-weight: normal;
