--- a/src/index.css
+++ b/src/index.css
@@ -1664,6 +1664,7 @@ input::-webkit-inner-spin-button {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  padding: 20px 0;
 
 }
 
@@ -1724,15 +1725,23 @@ input::-webkit-inner-spin-button {
   margin-top: 50px;
 }
 
+.queryhints {
+  width: 85%;
+  margin: 0 auto;
+}
+
 .queryHints-container{
+  background-color: rgba(211, 211, 211, 0.193);
+  border-radius: 20px;
   text-align: left;
+  max-width: 100%;
+  padding: 30px
 }
 
 .queryHints-container h4 {
-  margin: 20px 0;
+  margin-bottom: 20px;
   
   
-
 }
 
 .queryHints-container li {
