--- a/src/index.css
+++ b/src/index.css
@@ -1709,10 +1709,10 @@ input::-webkit-inner-spin-button {
 .reply {
   min-width: 350px;
   width: 85%;
-  padding: 30px;
+  padding: 30px 10px;
   margin: 0 10px;
   line-height: 1.5em;
-  font-size: 1em;
+  font-size: 0.9em;
   font-weight: normal;
   text-wrap: wrap;
   overflow-wrap: break-word;
@@ -2198,7 +2198,7 @@ input::-webkit-inner-spin-button {
 
 .reply {
 
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 @media (min-width: 1100px) {
